# pydantic-2-breaking-changes

./: README.md  main.py  pyproject.toml
