[tool.poetry]
name = "temp"
version = "0.1.0"
description = ""
authors = ["Andrew Fiorillo <andrew.fiorillo@deliveryhero.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
